--- a/OrderService/src/main/resources/application.yaml
+++ b/OrderService/src/main/resources/application.yaml
@@ -3,12 +3,15 @@ server:
 
 spring:
   datasource:
-    url: jdbc:mysql://${DB_HOST:localhost}:3306/orderdb
-    username: root
-    password: root
-    driverClassName: com.mysql.cj.jdbc.Driver
+    url: jdbc:h2:file:~/data/orderdb
+    username: sa
+    password: password
+    driverClassName: org.h2.Driver
+  h2:
+    console:
+      enabled:  true
   jpa:
-    database-platform: org.hibernate.dialect.MySQL57InnoDBDialect
+    database-platform: org.hibernate.dialect.H2Dialect
     hibernate:
       ddl-auto: update
   application:
@@ -19,18 +22,18 @@ spring:
     oauth2:
       resourceserver:
         jwt:
-          issuer-uri: https://dev-15585796.okta.com/oauth2/default
+          issuer-uri: https://trial-7971264.okta.com/oauth2/default
       client:
         registration:
           internal-client:
             provider: okta
             authorization-grant-type: client_credentials
             scope: internal
-            client-id: 0oa6cgklvwIS2SoFZ5d7
-            client-secret: L_VPQB5XQX5QAhnxaDqA0IhWG-TImnVpaHW7ER33
+            client-id: 0oa63beqkvglBuck8697
+            client-secret: 32v5XE1oMqWMgQvaUUrBoXsCra7tgB1svQfsPi9e
         provider:
           okta:
-            issuer-uri: https://dev-15585796.okta.com/oauth2/default
+            issuer-uri: https://trial-7971264.okta.com/oauth2/default
 
 resilience4j:
   circuitbreaker:
