--- a/OrderService/src/test/resources/application.yaml
+++ b/OrderService/src/test/resources/application.yaml
@@ -12,18 +12,18 @@ spring:
     oauth2:
       resourceserver:
         jwt:
-          issuer-uri: https://dev-15585796.okta.com/oauth2/default
+          issuer-uri: https://trial-7971264.okta.com/oauth2/default
       client:
         registration:
           internal-client:
             provider: okta
             authorization-grant-type: client_credentials
             scope: internal
-            client-id: 0oa6cgklvwIS2SoFZ5d7
-            client-secret: L_VPQB5XQX5QAhnxaDqA0IhWG-TImnVpaHW7ER33
+            client-id: 0oa63beqkvglBuck8697
+            client-secret: 32v5XE1oMqWMgQvaUUrBoXsCra7tgB1svQfsPi9e
         provider:
           okta:
-            issuer-uri: https://dev-15585796.okta.com/oauth2/default
+            issuer-uri: https://trial-7971264.okta.com/oauth2/default
 
 
 eureka:
