--- a/ProductService/src/main/resources/application.yaml
+++ b/ProductService/src/main/resources/application.yaml
@@ -3,12 +3,15 @@ server:
 
 spring:
   datasource:
-    url: jdbc:mysql://${DB_HOST:localhost}:3306/productdb
-    username: root
-    password: root
-    driverClassName: com.mysql.cj.jdbc.Driver
+    url: jdbc:h2:file:~/data/productdb
+    username: sa
+    password: password
+    driverClassName: org.h2.Driver
+  h2:
+    console:
+      enabled:  true
   jpa:
-    database-platform: org.hibernate.dialect.MySQL57InnoDBDialect
+    database-platform: org.hibernate.dialect.H2Dialect
     hibernate:
       ddl-auto: update
   application:
